--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -23,6 +23,8 @@
 
 		  <ul>
       <li><a href="/posts/post-1/">記事1</a></li>
-    </ul>
+      <li><a href="/posts/post-2/">記事2</a></li>
+      <li><a href="/posts/post-3/">記事3</a></li>
+		  </ul>
 	</body>
 </html>
